Bug 1131099 - Make TemporaryTypeSet::getCommonPrototype work better when there's no prototype. r=bhackett